--- a/src/app/core/components/app-header/app-header.html
+++ b/src/app/core/components/app-header/app-header.html
@@ -1,1 +1,10 @@
-<p>app-header works!</p>
+<mat-toolbar color="primary" class="app-header">
+    <mat-icon>menu_book</mat-icon>
+    <h1 class="app-header__logo">
+        <a mat-button routerLink="">
+            Book Catalog
+        </a>
+    </h1>
+    <span class="app-header__spacer"></span>
+    <a mat-button routerLink="">Home</a>
+</mat-toolbar>
