(feat): add book form, book search

--- a/src/app/book-details/containers/book-details-page/book-details-page.html
+++ b/src/app/book-details/containers/book-details-page/book-details-page.html
@@ -23,7 +23,13 @@
         </mat-card-content>
 
         <mat-card-actions class="book-details__actions">
-            <button mat-raised-button color="accent" routerLink="/">Back to list</button>
+            <button mat-raised-button
+                    color="accent"
+                    routerLink="/"
+                    type="button"
+            >
+                Back to list
+            </button>
         </mat-card-actions>
     </mat-card>
 } @else {
