--- a/src/app/books/containers/books-page/books-page.html
+++ b/src/app/books/containers/books-page/books-page.html
@@ -1,2 +1,2 @@
 <app-book-search-bar [$onSearch]="onSearch" />
-<app-books-list [booksList]="$filteredBooks()" />
+<app-books-list [$booksList]="$filteredBooks()" />
