--- a/src/app/core/components/app-header/app-header.html
+++ b/src/app/core/components/app-header/app-header.html
@@ -6,5 +6,5 @@
         </a>
     </h1>
     <span class="app-header__spacer"></span>
-    <a mat-button routerLink="">Home</a>
+    <a mat-button routerLink="" type="button">Home</a>
 </mat-toolbar>
