--- a/src/app/books/components/book-card/book-card.html
+++ b/src/app/books/components/book-card/book-card.html
@@ -2,7 +2,13 @@
 
 <mat-card class="book-card">
     <mat-card-header class="book-card__header">
-        <div mat-card-avatar class="book-card__avatar"></div>
+        <div mat-card-avatar class="book-card__avatar">
+            <img
+                class="book-card__img"
+                src="/assets/images/pngs/cat-book.png"
+                alt="sad kitty"
+            >
+        </div>
         <mat-card-title class="book-card__title ">{{ book?.name }}</mat-card-title>
         <mat-card-subtitle class="book-card__subtitle">{{ book?.author }}</mat-card-subtitle>
     </mat-card-header>
