--- a/src/app/books/components/book-card/book-card.scss
+++ b/src/app/books/components/book-card/book-card.scss
@@ -30,6 +30,13 @@
         border-radius: 50%;
         width: 40px;
         height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__img {
+        width: 40px;
     }
 
     &__title {
