--- a/src/app/books/components/books-list/books-list.scss
+++ b/src/app/books/components/books-list/books-list.scss
@@ -1,8 +1,18 @@
-.books-list__container {
-    padding: 10px 50px 30px 50px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 16px;
+.books-list {
+    &__container {
+        padding: 10px 50px 30px 50px;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 16px;
+    }
+
+    &__not-found {
+        order: 2;
+
+        &-img {
+            max-width: 200px;
+        }
+    }
 }
 
 @media (max-width: 900px) {
