--- a/src/app/core/components/page-not-found/page-not-found.html
+++ b/src/app/core/components/page-not-found/page-not-found.html
@@ -1,1 +1,3 @@
-<img class="not-found__image" src="/assets/images/svg/page-not-found.svg" alt="sad kitty">
+<div class="not-found__image">
+    <img src="/assets/images/pngs/sad-cat.png" alt="sad kitty">
+</div>
